color contrast fixed

--- a/_sass/_aboutus_listing_banner.scss
+++ b/_sass/_aboutus_listing_banner.scss
@@ -19,16 +19,17 @@
             font-size: 26px;
         }
 	}
+  
 }
 .aboutus-offers{
 	.header{
 		    background-color: $White;
 			p{
-				color: #8d8d8d ;
+				color: $Black ;
 			 }
 		}
 	.text-bold{
 		color:$Secondary;
 		}
-	
+
 	}
